--- a/res/layout/activity_mspray.xml
+++ b/res/layout/activity_mspray.xml
@@ -5,15 +5,21 @@
 
     <RelativeLayout
         android:id="@+id/InnerRelativeLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
         android:layout_alignParentBottom="true" >
 
         <Button
             android:id="@+id/newSpray"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Spray" >
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="72dp"
+            android:layout_marginBottom="72dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Start New Spray" >
         </Button>
 
     </RelativeLayout>
