--- a/res/layout/add_sprayer.xml
+++ b/res/layout/add_sprayer.xml
@@ -2,9 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
+    
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Place phone on top of the Sprayer's badge"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_above="@+id/innerRelativeLayout"
+        android:layout_margin="24dp"
+        android:src="@drawable/badge512" />
 
     <RelativeLayout
-        android:id="@+id/InnerRelativeLayout"
+        android:id="@+id/innerRelativeLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
@@ -20,7 +39,7 @@
                 android:text="@string/addSprayer" />
 
             <LinearLayout
-                android:id="@+id/InnerLinearLayout"
+                android:id="@+id/innerLinearLayout"
         		android:layout_width="fill_parent"
         		android:layout_height="wrap_content"
         		android:layout_below="@+id/button1">
@@ -30,7 +49,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="0.5"
                     android:layout_height="wrap_content"
-                    android:text="Back" />
+                    android:text="@string/back" />
 
                 <Button
                     android:id="@+id/button3"
@@ -39,9 +58,11 @@
                     android:layout_below="@+id/button1"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/button2"
-                    android:text="Confirm" />
+                    android:text="@string/confirm" />
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
+
+    
 
 </RelativeLayout>
