--- a/res/layout/activity_mspray.xml
+++ b/res/layout/activity_mspray.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="72dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:text="Start New Spray" >
+            android:text="@string/startSpray" >
         </Button>
 
     </RelativeLayout>
