--- a/res/layout/gps_location.xml
+++ b/res/layout/gps_location.xml
@@ -1,49 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <Button
-        android:id="@+id/gps_location_button_back"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/back" 
-        android:layout_marginLeft = "20dp"
-        android:layout_marginBottom = "20dp"
-        />
-
-    <Button
-        android:id="@+id/gps_location_button_confirm"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/confirm"
-        android:layout_marginRight = "20dp"
-        android:layout_marginBottom = "20dp" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <TextView
-        android:id="@+id/gps_location_textview_title"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:textSize = "26dp"
-        android:textStyle = "bold"
-        android:text="@string/gps_location" />
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/gps_location"
+        android:textSize="40sp" />
 
     <TextView
-        android:id="@+id/gps_location_textview_location_status"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/gps_location_textview_title"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="160dp"
-        android:text="@string/location_found" 
-        android:textSize = "20dp"/>
+        android:text="@string/location_found"
+        android:textSize="40sp" />
+
+    <LinearLayout
+        android:id="@+id/innerLinearLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/back" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/confirm" />
+    </LinearLayout>
 
 </RelativeLayout>
