--- a/res/layout/chemical_used.xml
+++ b/res/layout/chemical_used.xml
@@ -9,13 +9,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MSpray" >
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/chemicalUsed"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp" />
+
     <Button
         android:id="@+id/chemical_used_button_ddtButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_weight="0.25"
         android:gravity="center"
         android:text="@string/ddt"
@@ -25,9 +30,6 @@
         android:id="@+id/chemical_used_button_pyrethroidButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_weight="0.25"
         android:gravity="center"
         android:text="@string/pyrethroid"
@@ -37,9 +39,6 @@
         android:id="@+id/chemical_used_button_noSprayButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_weight="0.25"
         android:gravity="center"
         android:text="@string/noSpray"
@@ -49,9 +48,7 @@
         android:id="@+id/chemical_used_button_backButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="40dip"
         android:layout_weight="0.25"
         android:gravity="center"
         android:text="@string/back"
