--- a/res/layout/pyrethroid.xml
+++ b/res/layout/pyrethroid.xml
@@ -3,9 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MSpray" >
 
@@ -140,22 +137,23 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/innerLinearLayout"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
         <Button
-            android:id="@+id/pyrethroid_button_backButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/button2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.50"
+            android:layout_weight="0.5"
             android:text="@string/back" />
 
         <Button
-            android:id="@+id/pyrethroid_button_confirmButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/button3"
+            android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="0.50"
+            android:layout_weight="0.5"
             android:text="@string/confirm" />
     </LinearLayout>
 
