--- a/res/layout/second_chemical_used.xml
+++ b/res/layout/second_chemical_used.xml
@@ -10,7 +10,7 @@
     tools:context=".MSpray" >
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/second_chemical_used_textview_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/chemicalUsed2"
@@ -18,7 +18,7 @@
         android:textSize="25sp" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/second_chemical_used_button_ddtButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_weight="0.25"
@@ -26,7 +26,7 @@
         android:textSize="@string/h2" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/second_chemical_used_button_pyrethroidButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.25"
@@ -34,7 +34,7 @@
         android:textSize="@string/h2" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/second_chemical_used_button_noSprayButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.25"
@@ -42,7 +42,7 @@
         android:textSize="@string/h2" />
     
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/second_chemical_used_button_backButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dip"
