Updated add sprayer page. Refactored XML and Code a little bit, and made button for first add sprayer really big.

--- a/res/layout/add_sprayer.xml
+++ b/res/layout/add_sprayer.xml
@@ -2,26 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-    
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Place phone on top of the Sprayer's badge"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <ImageView
-        android:id="@+id/add_sprater_imageView_RFIDPic"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/scanRFIDLayout"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_above="@+id/innerRelativeLayout"
-        android:layout_margin="24dp"
-        android:src="@drawable/badge512" 
-        android:visibility="invisible"/>
+        android:visibility="gone" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:text="Place phone on top of the Sprayer&apos;s badge"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <ImageView
+            android:id="@+id/add_sprayer_imageView_RFIDPic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/innerRelativeLayout"
+            android:layout_below="@+id/textView1"
+            android:layout_margin="24dp"
+            android:src="@drawable/badge512" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/innerRelativeLayout"
@@ -36,52 +42,60 @@
             <Button
                 android:id="@+id/add_sprayer_button_addSprayer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
                 android:text="@string/addSprayer" />
 
             <LinearLayout
                 android:id="@+id/innerLinearLayout"
-        		android:layout_width="fill_parent"
-        		android:layout_height="wrap_content"
-        		android:layout_below="@+id/add_sprayer_button_addSprayer">
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/add_sprayer_button_addSprayer" >
 
                 <Button
                     android:id="@+id/add_sprayer_button_back"
                     android:layout_width="0dp"
-                    android:layout_weight="0.5"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
                     android:text="@string/back" />
 
                 <Button
                     android:id="@+id/add_sprayer_button_confirm"
                     android:layout_width="0px"
-                    android:layout_weight="0.5"
-                    android:layout_below="@+id/add_sprayer_button_addSprayer"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/add_sprayer_button_addSprayer"
                     android:layout_toRightOf="@+id/add_sprayer_button_back"
+                    android:layout_weight="0.5"
                     android:text="@string/confirm" />
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/add_sprayer_textView_PersonName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/sprayersListLayout"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/add_sprater_imageView_RFIDPic"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:textSize = "15dp"
-        android:text="BE02 - Mabunda YW" />
+        android:visibility="invisible" >
 
-    <TextView
-        android:id="@+id/add_sprayer_textView_PersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/add_sprayer_textView_PersonName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-         android:textSize = "15dp"
-        android:text="BE05 - Zabunda HW" />
+        <TextView
+            android:id="@+id/add_sprayer_textView_PersonName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/add_sprayer_imageView_RFIDPic"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="42dp"
+            android:text="BE02 - Mabunda YW"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/add_sprayer_textView_PersonName2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/add_sprayer_textView_PersonName"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="19dp"
+            android:text="BE05 - Zabunda HW"
+            android:textSize="15dp" />
+    </RelativeLayout>
 
 </RelativeLayout>
