--- a/res/layout/gps_location.xml
+++ b/res/layout/gps_location.xml
@@ -4,6 +4,7 @@
     android:layout_height="fill_parent" >
 
     <TextView
+        android:id="@+id/gps_location_textview_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -14,6 +15,7 @@
         android:textSize="40sp" />
 
     <TextView
+        android:id="@+id/gps_location_textview_contents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -23,20 +25,20 @@
         android:textSize="40sp" />
 
     <LinearLayout
-        android:id="@+id/innerLinearLayout"
+        android:id="@+id/gps_location_layout_innerLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/gps_location_button_backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="@string/back" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/gps_location_button_confirmButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
