--- a/res/layout/pyrethroid.xml
+++ b/res/layout/pyrethroid.xml
@@ -137,20 +137,20 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/innerLinearLayout"
+        android:id="@+id/pyrethroid_layout_innerLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/pyrethroid_button_backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="@string/back" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/pyrethroid_button_confirmButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
