--- a/res/layout/confirm_no_spray.xml
+++ b/res/layout/confirm_no_spray.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:screenOrientation="portrait" >
 
     <TextView
         android:id="@+id/confirm_no_spray_textview_title"
