--- a/res/layout/second_chemical_used.xml
+++ b/res/layout/second_chemical_used.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MSpray" >
+    tools:context=".MSpray"
+    android:screenOrientation="portrait" >
 
     <TextView
         android:id="@+id/second_chemical_used_textview_title"
