fixing hard-coded strings and removed tabs

--- a/res/layout/add_sprayer.xml
+++ b/res/layout/add_sprayer.xml
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="Sprayer IDs"
+            android:text="@string/sprayerIDs"
             android:textSize="25dp"
             android:textStyle="bold" />
     </RelativeLayout>
