--- a/res/layout/activity_mspray.xml
+++ b/res/layout/activity_mspray.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="72dp"
-        android:text="Start New Spray" >
+        android:text="@string/startSpray" >
     </Button>
 
 </RelativeLayout>
