--- a/res/layout/chemical_used.xml
+++ b/res/layout/chemical_used.xml
@@ -55,6 +55,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:textSize = "25dp"
-        android:text="Paper Work" />
+        android:text="@string/chemicalUsed" />
 
 </RelativeLayout>
