--- a/res/layout/chemical_used.xml
+++ b/res/layout/chemical_used.xml
@@ -15,7 +15,7 @@
         android:text="@string/noSpray" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/chemical_used_button_back"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
