--- a/res/layout/second_chemical_used.xml
+++ b/res/layout/second_chemical_used.xml
@@ -1,54 +1,49 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MSpray"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:screenOrientation="portrait" >
 
-    <TextView
-        android:id="@+id/second_chemical_used_textview_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/chemicalUsed2"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="25sp" />
-
-    <Button
-        android:id="@+id/second_chemical_used_button_ddtButton"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.25"
-        android:text="@string/ddt"
-        android:textSize="@string/h2" />
-
-    <Button
-        android:id="@+id/second_chemical_used_button_pyrethroidButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.25"
-        android:text="@string/pyrethroid"
-        android:textSize="@string/h2" />
-
-    <Button
-        android:id="@+id/second_chemical_used_button_noSprayButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.25"
-        android:text="@string/noSpray"
-        android:textSize="@string/h2" />
-    
     <Button
         android:id="@+id/second_chemical_used_button_backButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dip"
-        android:layout_weight="0.25"
-        android:text="@string/back"
-        android:textSize="@string/h2" />
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="@string/back" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/second_chemical_used_button_ddt"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_above="@+id/second_chemical_used_button_pyrethroid"
+        android:layout_alignLeft="@+id/second_chemical_used_button_pyrethroid"
+        android:layout_alignRight="@+id/second_chemical_used_button_pyrethroid"
+        android:layout_marginBottom="10dp"
+        android:text="@string/ddt" />
+
+    <Button
+        android:id="@+id/second_chemical_used_button_pyrethroid"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerVertical="true"
+        android:text="@string/pyrethroid" />
+
+    <TextView
+        android:id="@+id/second_chemical_used_textView_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"
+        android:text="@string/chemicalUsed2"
+        android:textSize="25dp" />
+
+</RelativeLayout>
