edited ddtform activity

--- a/res/layout/ddt.xml
+++ b/res/layout/ddt.xml
@@ -155,7 +155,8 @@
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="@string/confirm" />
+            android:text="@string/confirm" 
+            android:onClick="getData"/>
     </LinearLayout>
 
 </RelativeLayout>
