--- a/res/layout/finished.xml
+++ b/res/layout/finished.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/dataRecorded"
-        android:textSize="@string/h1" />
+        android:textSize="40dp" />
 
     <LinearLayout
         android:id="@+id/finished_layout_innerLinearLayout"
