--- a/res/layout/other_chemical_used.xml
+++ b/res/layout/other_chemical_used.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/otherChemicalUsed"
         android:gravity="center"
-        android:textSize="@string/h1" />
+        android:textSize="40dp" />
 
     <LinearLayout
         android:id="@+id/other_chemical_used_layout_innerLinearLayout"
