Lots of changes! I forgot to mention in the last change, I changed the name of the foreman from Simba R to Dakarai R since we already had a Simba. Changed the order of screens so now it goes, Foreman Scan --> GPS --> Add Sprayers. I added some intermediary screens too to make it clearer what is going on. Changed various text labels and buttons to be consistent and more appropriate. Code is pretty messy right now and there are some classes that arent used and some XML things that arent used and things that are named weird... but at least it worksgit status

--- a/res/layout/activity_mspray.xml
+++ b/res/layout/activity_mspray.xml
@@ -5,7 +5,7 @@
     android:screenOrientation="portrait" >
 
    <TextView
-        android:id="@+id/add_foreman_textview_foremanID"
+        android:id="@+id/activity_mspray_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -13,10 +13,10 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/scanSelfLabel"
-        android:textSize="24dp" />
+        android:textSize="20sp" />
 
     <Button
-        android:id="@+id/activity_mspray_scan_self"
+        android:id="@+id/activity_mspray_button"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerVertical="true"
