--- a/res/layout/activity_mspray.xml
+++ b/res/layout/activity_mspray.xml
@@ -24,6 +24,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="72dp"
+        android:textSize="20sp"
         android:text="@string/scanSelf" >
     </Button>
 
